--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "uuid": "^11.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
